2012-07-06  Kirit Saelensminde  <kirit@felspar.com>
 Added an `all` target so it's compatible with other projects.

2012-07-05  Kirit Saelensminde  <kirit@felspar.com>
 Changed the logging to use JSON objects rather than arrays.

2012-04-08  Kirit Saelensminde  <kirit@felspar.com>
 Added support for Windows build.

2012-04-07  Kirit Saelensminde  <kirit@felspar.com>
 Switched away from the use of crack to make use of a special search for the inner content in the template middleware for about 17-18% speed up.
 Switched away from replaceAll to using the string's replace() method for a further 12-14% speed up.

2012-03-04  Kirit Saelensminde  <kirit@felspar.com>
 Added a 412 resaponse.

2012-03-03  Kirit Saelensminde  <kirit@felspar.com>
 A default host configuration can now be set up using an empty host name key in the hosts configuration location.

2012-01-28  Kirit Saelensminde  <kirit@felspar.com>
 Added ChangeLog
 Added a path which can be re-written by views acting as middleware.